--- a/index.html
+++ b/index.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Giphy</title>
+   <head>
+       <title>Giphy</title>
 
-        <!-- Latest compiled and minified CSS -->
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link type="text/css" rel="stylesheet" href="css/style.css" />
-    </head>
-    <body>
-        <nav class="navbar navbar-dark bg-dark fixed-top justify-content-between">
-            <a class="navbar-brand">Giphy</a>
-            <div class="form-inline">
-                <input id="search-term" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button id="search-button" class="btn btn-outline-success my-2 my-sm-0">Search</button>
-            </div>
-        </nav>
+       <!-- Latest compiled and minified CSS -->
+       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+       <link type="text/css" rel="stylesheet" href="css/style.css" />
+   </head>
+   <body>
+       <nav class="navbar navbar-dark bg-dark fixed-top justify-content-between">
+           <a class="navbar-brand">Giphy</a>
+           <div class="form-inline">
+               <input id="search-term" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+               <button id="search-button" class="btn btn-outline-success my-2 my-sm-0">Search</button>
+           </div>
+       </nav>
 
-        <!-- Page Content -->
-        <div class="container">
-            <div class="row gallery justify-content-center">
-                <h3 class="text-center">  Search for a Gif above <br> Your results will display here</h3>
-            </div>
-        </div>
+       <!-- Page Content -->
+       <div class="container">
+           <div class="row gallery justify-content-center">
+               <h3 class="text-center">  Search for a Gif above <br> Your results will display here</h3>
+           </div>
+       </div>
 
-        <!-- Modal -->
-        <div id="modal01" class="modal" onclick="this.style.display='none'">
-            <span class="close">&times;&nbsp;&nbsp;&nbsp;&nbsp;</span>
-            <div class="modal-content">
-                <img id="img01" style="max-width:100%">
-            </div>
-        </div>
+       <!-- Modal -->
+       <div id="modal01" class="modal" onclick="this.style.display='none'">
+           <span class="close">&times;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+           <div class="modal-content">
+               <img id="img01">
+           </div>
+       </div>
 
-        <!-- Footer -->
-        <footer>
-            <div class="container">
-                <div class="row justify-content-center">
-                    <p>Copyright &copy; Your Website 2017</p>
-                </div>
-            </div>
-        </footer>
+       <!-- Footer -->
+       <footer>
+           <div class="container">
+               <div class="row justify-content-center">
+                   <p>Copyright &copy; Your Website 2017</p>
+               </div>
+           </div>
+       </footer>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        <script src="js/script.js" async defer> </script>
-    </body>
+       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+       <script src="js/script.js" async defer> </script>
+   </body>
 
 </html>
