--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
    </head>
    <body>
        <nav class="navbar navbar-dark bg-dark fixed-top justify-content-between">
-           <a class="navbar-brand" href="index.html" >Giphy</a>
-           <button id="Favorites" class"btn">Favorites</button>
+           <a class="navbar-brand" href="index.html">Giphy</a>
+           <button id="Favorites" class"btn btn-outline-success my-2 my-sm-0">Favorites</button>
            <div class="form-inline">
                <input id="search-term" class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                <button id="search-button" class="btn btn-outline-success my-2 my-sm-0">Search</button>
@@ -30,9 +30,8 @@
            <div class="modal-content">
                <img id="img01">
                <div>
-                   <button class="icon">Add to Favorites</button>
-                   <button class="closeModal">close</button>
-                   <!-- <img class="icon" src="https://cdn.iconscout.com/icon/free/png-256/heart-favourite-favorite-love-like-outline-interface-4-14712.png"> -->
+                   <button class= "buttonStyle" id="icon">Add to Favorites</button>
+                   <button class= "buttonStyle" id="closeModal">close</button>
                 </div>
            </div>
        </div>
